Added impossible mode

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="dark:text-white">
    <section class="nav-cont h-full flex relative flex-col items-start" tabindex="0">
     <button id="expand-btn" class="p-2">
-      ▾ <span id="modeShower">Play against friend</span>
+      ▾ <span id="modeShower"></span>
     </button>
     
     <section class="expanded absolute top-full z-20 flex flex-col items-start bg-[#eee] rounded-[10px] hidden dark:bg-[#333]">
